Do not use URL(..); deprecated as of Java 20 (#125)
(cherry picked from commit 65026b9fef68d25f6519501707142b301f02dce7)